# NeoMint

./: .env.example  .gitignore  README.md  install.sh  neomint.modelfile  neomint_project_setup.md  ritish.md
agent/: README.md
datasets/: README.md  neomint_train.jsonl  quality_check.py
docs/: README.md
eval/: README.md
fine-tuning/: README.md  train.ipynb
mcp-server/: .env.example  README.md  cli.py  pyproject.toml
mcp-server/src/neomint_mcp/: __init__.py  config.py  models.py  server.py
mcp-server/src/neomint_mcp/tools/: __init__.py  applications.py  clipboard.py  filesystem.py  shell.py
mcp-server/tests/: conftest.py  test_applications.py  test_clipboard.py  test_filesystem.py  test_shell.py
overlay-ui/: README.md
